circt-bc260128-00000aa3/origin/opt_output.log
/opt/llvm-22/bin/opt: <stdin>:1:8: error: expected 'module asm'
module {
       ^
